k8s/graph-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: graph-gateway
  labels:
    name: graph-gateway
