k8s/graph-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graph-gateway
  # namespace: graph-gateway
spec:
  selector:
    app: graph-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
